argocd/applications/buzz/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buzz-admin
  annotations:
    tailscale.com/tags: tag:k8s
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - buzz-admin.ide-newton.ts.net
  rules:
    - host: buzz-admin.ide-newton.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: buzz
                port:
                  number: 3000
